introduced contact us feature

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -10,7 +10,7 @@
   <div class="text-center px-8 py-4">
     <ul class="list-none">
       <li>
-        <a class="text-gray-800 hover:text-purple-600 no-underline" href="{% if isFront %}#features{% else %}{{ env.baseUrl }}#features{% endif %}">Features</a>
+        <a class="text-gray-800 hover:text-purple-600 no-underline" href="mailto:contact@swtco.de?subject=SWTCO Inquiry">Contact Us</a>
       </li>
     </ul>
   </div>
