--- a/src/_includes/navbar.njk
+++ b/src/_includes/navbar.njk
@@ -13,6 +13,8 @@
       href="{% if isFront %}#about{% else %}{{ env.baseUrl }}#about{% endif %}">About</a>
     <a class="text-gray-800 font-bold hover:text-purple-600 text-lg text-center w-full no-underline sm:w-auto sm:px-4 py-2 sm:py-1"
       href="{% if isFront %}#features{% else %}{{ env.baseUrl }}#features{% endif %}">Features</a>
+    <a class="text-gray-800 font-bold hover:text-purple-600 text-lg text-center w-full no-underline sm:w-auto sm:px-4 py-2 sm:py-1"
+      href="mailto:contact@swtco.de?subject=SWTCO Inquiry">Contact Us</a>
     <a class="text-gray-800 border border-indigo-800 text-lg bg-gray-100 rounded-full w-auto no-underline text-center sm:text-left hover:border-purple-600 hover:text-purple-600 hover:bg-white hover:shadow-md px-6 py-1 my-2 sm:my-0 sm:ml-4"
       href="{% if isFront %}#register{% else %}{{ env.baseUrl }}#register{% endif %}">Register Now</a>
   </div>
